# cmake-template

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ubuntu.yml
src/: CMakeLists.txt  main.cpp
